shaku/tests/ui/resolve_unregistered_component.stderr
error[E0277]: the trait bound `TestModule: shaku::HasComponent<(dyn ServiceTrait + 'static)>` is not satisfied
  --> $DIR/resolve_unregistered_component.rs:21:66
   |
21 |     let _service = HasComponent::<dyn ServiceTrait>::resolve_ref(&module);
   |                                                                  ^^^^^^^ the trait `shaku::HasComponent<(dyn ServiceTrait + 'static)>` is not implemented for `TestModule`
   |
   = note: required by `shaku::HasComponent::resolve_ref`
